--- a/public/css/prism.css
+++ b/public/css/prism.css
@@ -33,7 +33,7 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 0;
-	margin: .5em 0 0 -0.5em;
+	margin: 0 0 0 -0.5em;
 	overflow: auto;	
 }
 
