--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,9 +132,8 @@ i, em { font-style: italic }
 a {
     color: inherit;
     text-decoration: none;
-    padding: 0 0.1em;
-    background: rgba(255,255,255,0.5);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
+    padding: 0.05em 0.2em 0.2em;
+    background: hsla(200,50%,50%,0.5);
     border-radius: 0.2em;
     
     -webkit-transition: 0.5s;
@@ -147,7 +146,6 @@ a {
 a:hover,
 a:focus {
     background: rgba(255,255,255,1);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
 }
 
 /*
